--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12,6 +12,15 @@
     border-radius: 20px;
 }
 
+.settingsdiv {
+
+    width:500px;
+    margin-left: 50px;
+    display:table;
+    font-size: 20px;
+    text-align: left;
+}
+
 body {
     padding: 56px 0 0 0;
 }
