--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,50 @@
 
+.cont{
+    width: 93%;
+    max-width: 350px;
+    text-align: center;
+    margin: 4% auto;
+    padding: 30px 0;
+    background: #111;
+    color: #EEE;
+    border-radius: 5px;
+    border: thin solid #444;
+    overflow: hidden;
+}
+
+div.stars{
+    width: 270px;
+    display: inline-block;
+}
+
+input.star{
+    display: none;
+}
+
+label.star {
+    float: right;
+    padding: 10px;
+    font-size: 36px;
+    color: #444;
+    transition: all .2s;
+}
+
+input.star:checked ~ label.star:before {
+    content:'\f005';
+    color: #FD4;
+    transition: all .25s;
+}
+
+label.star:hover{
+    transform: rotate(-15deg) scale(1.3);
+}
+
+label.star:before{
+    content:"\f006";
+    font-family: FontAwesome;
+}
+
+
 .logindiv {
 
     width:500px;
@@ -24,3 +70,6 @@
 body {
     padding: 56px 0 0 0;
 }
+
+
+
